// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for active: false, direction: asc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  align-items: flex-end;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  z-index: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  inset: -2px -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  z-index: -1;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted);
  }
  button:hover .icon, button:focus-visible .icon {
    opacity: 1;
  }
}

.icon {
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 0;
  transform: rotate3d(0,0,1,0deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() > should return correct css for active: false, direction: desc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  align-items: flex-end;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  z-index: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  inset: -2px -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  z-index: -1;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted);
  }
  button:hover .icon, button:focus-visible .icon {
    opacity: 1;
  }
}

.icon {
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 0;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() > should return correct css for active: true, direction: asc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  align-items: flex-end;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  z-index: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  inset: -2px -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  z-index: -1;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted);
  }
  button:hover .icon, button:focus-visible .icon {
    opacity: 1;
  }
}

.icon {
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 1;
  transform: rotate3d(0,0,1,0deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() > should return correct css for active: true, direction: desc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  align-items: flex-end;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  z-index: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  inset: -2px -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  z-index: -1;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted);
  }
  button:hover .icon, button:focus-visible .icon {
    opacity: 1;
  }
}

.icon {
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 1;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() > should return correct css for active: true, direction: desc, hideLabel: false and multiline: true 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: normal !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  align-items: flex-end;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  z-index: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  inset: -2px -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  z-index: -1;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media (forced-colors: active) {
  button:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted);
  }
  button:hover .icon, button:focus-visible .icon {
    opacity: 1;
  }
}

.icon {
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  opacity: 1;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
}"
`;

exports[`getComponentCss() > should return correct css for active: undefined, direction: undefined, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}"
`;

exports[`getComponentCss() > should return correct css for active: undefined, direction: undefined, hideLabel: true and multiline: false 1`] = `
":host {
  display: table-cell;
  padding: 2px var(--_a, clamp(8px, 0.5vw + 6px, 16px)) var(--_a, clamp(8px, 0.5vw + 6px, 16px)) !important;
  vertical-align: bottom !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  display: block;
  border: 0;
}"
`;
